--- a/src/report/htmlreport/templates/report.html
+++ b/src/report/htmlreport/templates/report.html
@@ -41,7 +41,7 @@
    Sallen.cir Tolerance Analysis Report
   </h1>
   <p style="text-align:center;margin-top:-15px;">
-   Creation date: 24/07/2021 17:00:34 UTC
+   Creation date: 25/07/2021 23:13:50 UTC
   </p>
   <h2>
    Component
@@ -179,18 +179,18 @@
   </h2>
   AC analysis command: ac dec 40 10 100
   <br/>
-  Running time: 1800
+  Running time: 800
   <br/>
   Measure port: out
   <br/>
-  Standard cutoff frequency: -0.5808228 Hz
+  Standard cutoff frequency: 63.99055 Hz
   <br/>
   Acceptable tolerance of cutoff frequency: 0.01
   <br/>
   Acceptable lowest yield: 0.98
   <br/>
   <p>
-   This circuit design is acceptable. The estimated yield from simulation is 259.667684.
+   This circuit design is acceptable. The estimated yield from simulation is 1.
   </p>
   <p style="text-align:center;margin-bottom:1px;">
    Left Tail Probability Table
@@ -209,82 +209,82 @@
    <tbody>
     <tr>
      <td>
-      -0.5810146757767479
+      63.96970388705164
      </td>
      <td>
-      0.060000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      -0.5810147744612477
-     </td>
-     <td>
-      0.050000
+      0.060
      </td>
     </tr>
     <tr>
      <td>
-      -0.5810448262843877
+      63.96968377766691
      </td>
      <td>
-      0.040000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      -0.5810592404706127
-     </td>
-     <td>
-      0.030000
+      0.050
      </td>
     </tr>
     <tr>
      <td>
-      -0.5811075283012976
+      63.9672895087383
      </td>
      <td>
-      0.020000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      -0.5811428925066036
-     </td>
-     <td>
-      0.010000
+      0.040
      </td>
     </tr>
     <tr>
      <td>
-      1.1390134393943412e+18
+      63.96489710928392
      </td>
      <td>
-      -25.858768
-     </td>
-    </tr>
-    <tr>
-     <td>
-      9.117393632091847e+18
-     </td>
-     <td>
-      -51.727537
+      0.030
      </td>
     </tr>
     <tr>
      <td>
-      3.0777151922793357e+19
+      63.96488623824899
      </td>
      <td>
-      -77.596305
+      0.020
      </td>
     </tr>
     <tr>
      <td>
-      7.296029965626558e+19
+      63.96465024065891
      </td>
      <td>
-      -103.465074
+      0.010
+     </td>
+    </tr>
+    <tr>
+     <td>
+      63.96377245328544
+     </td>
+     <td>
+      0.008
+     </td>
+    </tr>
+    <tr>
+     <td>
+      63.963380480355966
+     </td>
+     <td>
+      0.006
+     </td>
+    </tr>
+    <tr>
+     <td>
+      63.961741211923126
+     </td>
+     <td>
+      0.004
+     </td>
+    </tr>
+    <tr>
+     <td>
+      63.95769410967143
+     </td>
+     <td>
+      0.002
      </td>
     </tr>
    </tbody>
@@ -306,82 +306,82 @@
    <tbody>
     <tr>
      <td>
-      -0.5806338043403027
+      64.00849691907896
      </td>
      <td>
-      0.060000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      -1.4609490054712322e+24
-     </td>
-     <td>
-      0.050000
+      0.060
      </td>
     </tr>
     <tr>
      <td>
-      -1.1728380433032677e+25
+      64.01214360455793
      </td>
      <td>
-      0.040000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      -3.962924197186196e+25
-     </td>
-     <td>
-      0.030000
+      0.050
      </td>
     </tr>
     <tr>
      <td>
-      -9.399048132947179e+25
+      64.01535578876513
      </td>
      <td>
-      0.020000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      -0.5804938615303601
-     </td>
-     <td>
-      0.010000
+      0.040
      </td>
     </tr>
     <tr>
      <td>
-      -1.4677497027486036e+24
+      64.01560738945157
      </td>
      <td>
-      -25.858768
-     </td>
-    </tr>
-    <tr>
-     <td>
-      -1.1748810166445223e+25
-     </td>
-     <td>
-      -51.727537
+      0.030
      </td>
     </tr>
     <tr>
      <td>
-      -3.9659900400071075e+25
+      64.018327655564
      </td>
      <td>
-      -77.596305
+      0.020
      </td>
     </tr>
     <tr>
      <td>
-      -9.401773941269225e+25
+      64.01884150167241
      </td>
      <td>
-      -103.465074
+      0.010
+     </td>
+    </tr>
+    <tr>
+     <td>
+      64.01887118483397
+     </td>
+     <td>
+      0.008
+     </td>
+    </tr>
+    <tr>
+     <td>
+      64.01887759198753
+     </td>
+     <td>
+      0.006
+     </td>
+    </tr>
+    <tr>
+     <td>
+      64.01893959407685
+     </td>
+     <td>
+      0.004
+     </td>
+    </tr>
+    <tr>
+     <td>
+      64.02025619016439
+     </td>
+     <td>
+      0.002
      </td>
     </tr>
    </tbody>
@@ -408,10 +408,10 @@
       Frequency
      </td>
      <td>
-      -5.813576e-01
+      6.394102e+01
      </td>
      <td>
-      -5.802959e-01
+      6.403921e+01
      </td>
     </tr>
     <tr>
@@ -419,10 +419,10 @@
       c1
      </td>
      <td>
-      2.100000e-09
+      1.900000e-09
      </td>
      <td>
-      1.900000e-09
+      2.100000e-09
      </td>
     </tr>
     <tr>
@@ -485,7 +485,7 @@
       ra
      </td>
      <td>
-      1.010000e+08
+      9.900000e+07
      </td>
      <td>
       9.900000e+07
@@ -496,7 +496,7 @@
       rb
      </td>
      <td>
-      9.900000e-01
+      1.010000e+00
      </td>
      <td>
       9.900000e-01
