--- a/src/config.ui
+++ b/src/config.ui
@@ -71,7 +71,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="tab1">
       <attribute name="title">
@@ -81,7 +81,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>295</y>
+         <y>360</y>
          <width>279</width>
          <height>111</height>
         </rect>
@@ -328,7 +328,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>295</y>
+         <y>360</y>
          <width>279</width>
          <height>81</height>
         </rect>
@@ -382,7 +382,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>215</y>
+         <y>280</y>
          <width>281</width>
          <height>81</height>
         </rect>
@@ -456,16 +456,16 @@
         </layout>
        </widget>
       </widget>
-      <widget class="QWidget" name="layoutWidget">
+      <widget class="QWidget" name="">
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>0</y>
+         <y>1</y>
          <width>281</width>
-         <height>211</height>
+         <height>281</height>
         </rect>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="3,1,1,2">
+       <layout class="QVBoxLayout" name="verticalLayout" stretch="5,1,1,2">
         <item>
          <widget class="QWidget" name="widget_2" native="true">
           <widget class="QWidget" name="layoutWidget">
@@ -474,7 +474,7 @@
              <x>0</x>
              <y>0</y>
              <width>271</width>
-             <height>95</height>
+             <height>144</height>
             </rect>
            </property>
            <layout class="QFormLayout" name="formLayout">
@@ -550,6 +550,88 @@
               </property>
               <property name="value">
                <number>100</number>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0">
+             <widget class="QLabel" name="label_32">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Acceptable tol</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1">
+             <widget class="QDoubleSpinBox" name="accptol">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <horstretch>3</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="decimals">
+               <number>8</number>
+              </property>
+              <property name="minimum">
+               <double>0.000000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>1.000000000000000</double>
+              </property>
+              <property name="singleStep">
+               <double>0.010000000000000</double>
+              </property>
+              <property name="stepType">
+               <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+              </property>
+              <property name="value">
+               <double>0.950000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="QLabel" name="label_33">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Acceptable yield</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="1">
+             <widget class="QDoubleSpinBox" name="yd">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <horstretch>3</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="decimals">
+               <number>8</number>
+              </property>
+              <property name="minimum">
+               <double>0.000000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>1.000000000000000</double>
+              </property>
+              <property name="singleStep">
+               <double>0.010000000000000</double>
+              </property>
+              <property name="stepType">
+               <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+              </property>
+              <property name="value">
+               <double>0.950000000000000</double>
               </property>
              </widget>
             </item>
@@ -868,7 +950,7 @@
          <x>0</x>
          <y>11</y>
          <width>278</width>
-         <height>151</height>
+         <height>197</height>
         </rect>
        </property>
        <layout class="QFormLayout" name="formLayout_3">
@@ -938,7 +1020,7 @@
            </sizepolicy>
           </property>
           <property name="decimals">
-           <number>4</number>
+           <number>8</number>
           </property>
           <property name="minimum">
            <double>0.000000000000000</double>
@@ -957,7 +1039,39 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="0" colspan="2">
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_30">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Simulation time</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QSpinBox" name="cmrrtime">
+          <property name="minimum">
+           <number>2</number>
+          </property>
+          <property name="maximum">
+           <number>100000</number>
+          </property>
+          <property name="singleStep">
+           <number>100</number>
+          </property>
+          <property name="stepType">
+           <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+          </property>
+          <property name="value">
+           <number>100</number>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="2">
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <widget class="QLabel" name="label_18">
@@ -1030,7 +1144,7 @@
          </layout>
         </item>
         <item row="3" column="0">
-         <widget class="QLabel" name="label_30">
+         <widget class="QLabel" name="label_31">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -1038,26 +1152,35 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Simulation time</string>
+           <string>Acceptable yield</string>
           </property>
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QSpinBox" name="cmrrtime">
+         <widget class="QDoubleSpinBox" name="cmrryd">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <horstretch>3</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="decimals">
+           <number>8</number>
+          </property>
           <property name="minimum">
-           <number>2</number>
+           <double>0.000000000000000</double>
           </property>
           <property name="maximum">
-           <number>100000</number>
+           <double>1.000000000000000</double>
           </property>
           <property name="singleStep">
-           <number>100</number>
+           <double>0.010000000000000</double>
           </property>
           <property name="stepType">
            <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
           </property>
           <property name="value">
-           <number>100</number>
+           <double>0.950000000000000</double>
           </property>
          </widget>
         </item>
@@ -1086,18 +1209,43 @@
           <height>25</height>
          </rect>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,2,3">
+        <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1,1,5">
          <item>
           <widget class="QLabel" name="label_25">
            <property name="text">
-            <string>First</string>
+            <string>1st</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="open1">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>Open</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clear1">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Clear</string>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>7</width>
+             <height>16</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -1129,18 +1277,43 @@
           <height>25</height>
          </rect>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,2,3">
+        <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,1,1,5">
          <item>
           <widget class="QLabel" name="label_26">
            <property name="text">
-            <string>Second</string>
+            <string>2nd</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="open2">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>Open</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clear2">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Clear</string>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>7</width>
+             <height>16</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -1172,18 +1345,43 @@
           <height>25</height>
          </rect>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,2,3">
+        <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,1,1,5">
          <item>
           <widget class="QLabel" name="label_27">
            <property name="text">
-            <string>Third</string>
+            <string>3rd</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="open3">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>Open</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clear3">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Clear</string>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>7</width>
+             <height>16</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -1215,18 +1413,43 @@
           <height>25</height>
          </rect>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="1,2,3">
+        <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="1,1,1,5">
          <item>
           <widget class="QLabel" name="label_28">
            <property name="text">
-            <string>Fourth</string>
+            <string>4th</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="open4">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>Open</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clear4">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Clear</string>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>7</width>
+             <height>16</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -1258,18 +1481,43 @@
           <height>25</height>
          </rect>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="1,2,3">
+        <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="1,1,1,5">
          <item>
           <widget class="QLabel" name="label_29">
            <property name="text">
-            <string>Fifth</string>
+            <string>5th</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="open5">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>Open</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clear5">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Clear</string>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>7</width>
+             <height>16</height>
+            </size>
            </property>
           </widget>
          </item>
