--- a/src/report/htmlreport/templates/base.html
+++ b/src/report/htmlreport/templates/base.html
@@ -73,6 +73,9 @@
     {% block wsttable %}
 
     {% endblock %}
+
+    {% load static %}
+    <img src="{% static 'fig.svg' %}" alt="figure" width="595px"/>
 </body>
 
 </html>
