--- a/src/report/htmlreport/templates/report.html
+++ b/src/report/htmlreport/templates/report.html
@@ -41,7 +41,7 @@
    Audio_AmpV3.net Tolerance Analysis Report
   </h1>
   <p style="text-align:center;margin-top:-15px;">
-   Creation date: 01/08/2021 15:22:00 UTC
+   Creation date: 02/08/2021 10:51:09 UTC
   </p>
   <h2>
    Component
@@ -188,7 +188,7 @@
   <h2>
    Result
   </h2>
-  AC analysis command: ac dec 40 10 100
+  Analysis command: ac dec 40 1 1G
   <br/>
   Running time: 900
   <br/>
@@ -196,12 +196,12 @@
   <br/>
   Standard cutoff frequency: 2492.805 Hz
   <br/>
-  Acceptable tolerance of cutoff frequency: 0.01
+  Acceptable tolerance of cutoff frequency: 0.95
   <br/>
-  Acceptable lowest yield: 0.98
+  Acceptable lowest yield: 0.95
   <br/>
   <p>
-   This circuit design is not acceptable. The estimated yield from simulation is only 0.7216.
+   This circuit design is acceptable. The estimated yield from simulation is 1.
   </p>
   <p style="text-align:center;margin-bottom:1px;">
    Left Tail Probability Table
@@ -220,82 +220,82 @@
    <tbody>
     <tr>
      <td>
-      2455.813695931845
+      2451.4846959951547
      </td>
      <td>
-      0.139212
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2451.2019998876262
-     </td>
-     <td>
-      0.113369
+      0.075
      </td>
     </tr>
     <tr>
      <td>
-      2450.277918039334
+      2445.155542732812
      </td>
      <td>
-      0.087527
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2437.8793671177536
-     </td>
-     <td>
-      0.061685
+      0.065
      </td>
     </tr>
     <tr>
      <td>
-      2436.055391896607
+      2437.5214551153417
      </td>
      <td>
-      0.035842
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2428.825722856359
-     </td>
-     <td>
-      0.010000
+      0.055
      </td>
     </tr>
     <tr>
      <td>
-      2420.124548450408
+      2437.4875780633924
      </td>
      <td>
-      0.008000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2417.101855567207
-     </td>
-     <td>
-      0.006000
+      0.045
      </td>
     </tr>
     <tr>
      <td>
-      2401.028670398049
+      2437.4759852193565
      </td>
      <td>
-      0.004000
+      0.035
      </td>
     </tr>
     <tr>
      <td>
-      2395.1079776179663
+      2430.021727529417
      </td>
      <td>
-      0.002000
+      0.025
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2426.171465657422
+     </td>
+     <td>
+      0.020
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2423.891048448176
+     </td>
+     <td>
+      0.015
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2423.8514123575064
+     </td>
+     <td>
+      0.010
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2411.6077078825433
+     </td>
+     <td>
+      0.005
      </td>
     </tr>
    </tbody>
@@ -317,82 +317,82 @@
    <tbody>
     <tr>
      <td>
-      2487.152407658727
+      2534.491817958194
      </td>
      <td>
-      0.139212
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2495.2593814625934
-     </td>
-     <td>
-      0.113369
+      0.075
      </td>
     </tr>
     <tr>
      <td>
-      2495.260735707607
+      2534.539016285983
      </td>
      <td>
-      0.087527
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2508.852453912975
-     </td>
-     <td>
-      0.061685
+      0.065
      </td>
     </tr>
     <tr>
      <td>
-      2541.2076249339716
+      2544.632400597968
      </td>
      <td>
-      0.035842
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2575.2604687564435
-     </td>
-     <td>
-      0.010000
+      0.055
      </td>
     </tr>
     <tr>
      <td>
-      2575.2614067948502
+      2545.5420281182546
      </td>
      <td>
-      0.008000
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2582.639867834217
-     </td>
-     <td>
-      0.006000
+      0.045
      </td>
     </tr>
     <tr>
      <td>
-      2586.234626190052
+      2548.3806379050825
      </td>
      <td>
-      0.004000
+      0.035
      </td>
     </tr>
     <tr>
      <td>
-      2587.581124083775
+      2545.547856074055
      </td>
      <td>
-      0.002000
+      0.025
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2545.583007682579
+     </td>
+     <td>
+      0.020
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2548.3806379050825
+     </td>
+     <td>
+      0.015
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2563.4390447669302
+     </td>
+     <td>
+      0.010
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2571.321455690952
+     </td>
+     <td>
+      0.005
      </td>
     </tr>
    </tbody>
@@ -526,5 +526,6 @@
     </tr>
    </tbody>
   </table>
+  <img alt="figure" src="/static/fig.svg" width="595px"/>
  </body>
 </html>
