--- a/src/report/htmlreport/templates/base.html
+++ b/src/report/htmlreport/templates/base.html
@@ -51,6 +51,7 @@
     {% endblock %}
 
     <h2>Result</h2>
+    Simulation mode: {{mode}}<br>
     Analysis command: {{command}}<br>
     Running time: {{mc_runs}}<br>
     Measure port: {{port}}<br>
