--- a/src/report/htmlreport/templates/report.html
+++ b/src/report/htmlreport/templates/report.html
@@ -33,21 +33,21 @@
         }
   </style>
   <title>
-   Audio_AmpV3.net report
+   cmrr.net report
   </title>
  </head>
  <body>
   <h1>
-   Audio_AmpV3.net Tolerance Analysis Report
+   cmrr.net Tolerance Analysis Report
   </h1>
   <p style="text-align:center;margin-top:-15px;">
-   Creation date: 02/08/2021 10:51:09 UTC
+   Creation date: 11/08/2021 16:44:38 UTC
   </p>
   <h2>
    Component
   </h2>
   <p style="text-align:center;margin-bottom:1px;">
-   4 Capacitors
+   2 Capacitors
   </p>
   <table border="1" class="dataframe">
    <thead>
@@ -77,32 +77,10 @@
     </tr>
     <tr>
      <td>
-      c2
-     </td>
-     <td>
-      1e-06
-     </td>
-     <td>
-      0.05
-     </td>
-    </tr>
-    <tr>
-     <td>
       c3
      </td>
      <td>
       4.4e-10
-     </td>
-     <td>
-      0.05
-     </td>
-    </tr>
-    <tr>
-     <td>
-      c4
-     </td>
-     <td>
-      1e-06
      </td>
      <td>
       0.05
@@ -133,7 +111,7 @@
       r1
      </td>
      <td>
-      100000
+      200000
      </td>
      <td>
       0.01
@@ -144,7 +122,7 @@
       r2
      </td>
      <td>
-      100000
+      200000
      </td>
      <td>
       0.01
@@ -188,15 +166,17 @@
   <h2>
    Result
   </h2>
-  Analysis command: ac dec 40 1 1G
+  Simulation mode:
   <br/>
-  Running time: 900
+  Analysis command: ac dec 40 100.0 3000.0
+  <br/>
+  Running time: 1000
   <br/>
   Measure port: out
   <br/>
-  Standard cutoff frequency: 2492.805 Hz
+  Standard cutoff frequency: 76.8866246 Hz
   <br/>
-  Acceptable tolerance of cutoff frequency: 0.95
+  Acceptable tolerance of cutoff frequency: 0.01
   <br/>
   Acceptable lowest yield: 0.95
   <br/>
@@ -220,7 +200,7 @@
    <tbody>
     <tr>
      <td>
-      2451.4846959951547
+      76.81481408027726
      </td>
      <td>
       0.075
@@ -228,7 +208,7 @@
     </tr>
     <tr>
      <td>
-      2445.155542732812
+      76.80941118717986
      </td>
      <td>
       0.065
@@ -236,7 +216,7 @@
     </tr>
     <tr>
      <td>
-      2437.5214551153417
+      76.80933496821233
      </td>
      <td>
       0.055
@@ -244,7 +224,7 @@
     </tr>
     <tr>
      <td>
-      2437.4875780633924
+      76.80916872513676
      </td>
      <td>
       0.045
@@ -252,7 +232,7 @@
     </tr>
     <tr>
      <td>
-      2437.4759852193565
+      76.80233984642226
      </td>
      <td>
       0.035
@@ -260,7 +240,7 @@
     </tr>
     <tr>
      <td>
-      2430.021727529417
+      76.80226248205807
      </td>
      <td>
       0.025
@@ -268,7 +248,7 @@
     </tr>
     <tr>
      <td>
-      2426.171465657422
+      76.80222128714702
      </td>
      <td>
       0.020
@@ -276,7 +256,7 @@
     </tr>
     <tr>
      <td>
-      2423.891048448176
+      76.80165179343072
      </td>
      <td>
       0.015
@@ -284,7 +264,7 @@
     </tr>
     <tr>
      <td>
-      2423.8514123575064
+      76.79996174658
      </td>
      <td>
       0.010
@@ -292,7 +272,7 @@
     </tr>
     <tr>
      <td>
-      2411.6077078825433
+      76.79990438746438
      </td>
      <td>
       0.005
@@ -317,7 +297,7 @@
    <tbody>
     <tr>
      <td>
-      2534.491817958194
+      76.94833606636521
      </td>
      <td>
       0.075
@@ -325,7 +305,7 @@
     </tr>
     <tr>
      <td>
-      2534.539016285983
+      76.95644369399585
      </td>
      <td>
       0.065
@@ -333,7 +313,7 @@
     </tr>
     <tr>
      <td>
-      2544.632400597968
+      76.96049646583016
      </td>
      <td>
       0.055
@@ -341,7 +321,7 @@
     </tr>
     <tr>
      <td>
-      2545.5420281182546
+      76.9665831069959
      </td>
      <td>
       0.045
@@ -349,7 +329,7 @@
     </tr>
     <tr>
      <td>
-      2548.3806379050825
+      76.96665963666999
      </td>
      <td>
       0.035
@@ -357,7 +337,7 @@
     </tr>
     <tr>
      <td>
-      2545.547856074055
+      76.9666251960713
      </td>
      <td>
       0.025
@@ -365,7 +345,7 @@
     </tr>
     <tr>
      <td>
-      2545.583007682579
+      76.9666419960951
      </td>
      <td>
       0.020
@@ -373,7 +353,7 @@
     </tr>
     <tr>
      <td>
-      2548.3806379050825
+      76.96665963666999
      </td>
      <td>
       0.015
@@ -381,7 +361,7 @@
     </tr>
     <tr>
      <td>
-      2563.4390447669302
+      76.96670424739861
      </td>
      <td>
       0.010
@@ -389,7 +369,7 @@
     </tr>
     <tr>
      <td>
-      2571.321455690952
+      76.9668093386549
      </td>
      <td>
       0.005
@@ -419,10 +399,10 @@
       Frequency
      </td>
      <td>
-      2.358444e+03
+      7.679932e+01
      </td>
      <td>
-      2.640658e+03
+      7.697306e+01
      </td>
     </tr>
     <tr>
@@ -430,21 +410,10 @@
       c1
      </td>
      <td>
-      4.620000e-10
+      4.180000e-10
      </td>
      <td>
       4.180000e-10
-     </td>
-    </tr>
-    <tr>
-     <td>
-      c2
-     </td>
-     <td>
-      1.050000e-06
-     </td>
-     <td>
-      9.500000e-07
      </td>
     </tr>
     <tr>
@@ -452,21 +421,10 @@
       c3
      </td>
      <td>
-      4.620000e-10
-     </td>
-     <td>
       4.180000e-10
      </td>
-    </tr>
-    <tr>
      <td>
-      c4
-     </td>
-     <td>
-      1.050000e-06
-     </td>
-     <td>
-      9.500000e-07
+      4.620000e-10
      </td>
     </tr>
     <tr>
@@ -474,10 +432,10 @@
       r1
      </td>
      <td>
-      1.010000e+05
+      1.980000e+05
      </td>
      <td>
-      9.900000e+04
+      2.020000e+05
      </td>
     </tr>
     <tr>
@@ -485,10 +443,10 @@
       r2
      </td>
      <td>
-      1.010000e+05
+      1.980000e+05
      </td>
      <td>
-      9.900000e+04
+      2.020000e+05
      </td>
     </tr>
     <tr>
@@ -496,10 +454,10 @@
       r3
      </td>
      <td>
-      1.010000e+05
+      9.900000e+04
      </td>
      <td>
-      9.900000e+04
+      1.010000e+05
      </td>
     </tr>
     <tr>
@@ -507,7 +465,7 @@
       r4
      </td>
      <td>
-      1.010000e+03
+      9.900000e+02
      </td>
      <td>
       9.900000e+02
@@ -518,10 +476,10 @@
       r5
      </td>
      <td>
-      1.010000e+03
+      9.900000e+02
      </td>
      <td>
-      9.900000e+02
+      1.010000e+03
      </td>
     </tr>
    </tbody>
